# RAISE

./: README.md  pyproject.toml
data/: RBP-exon_network.gexf  SF-exon_network.gexf  downstream.bed  exon.bed  upstream.bed
src/RAISE/: MANIFEST.in  cli.py  find_target.py
src/SPONGE/: __init__.py  calculate_activity.py  cli.py  construct_network.py  find_target.py  limma_test.R
test/calculate_activity/: run_calculate_activity.sh
test/calculate_activity/output/: HLE-B3_activity.txt
test/construct_network/: run_construct_network.sh
test/construct_network/input/DE/: HepG2_QKI_expr.txt  HepG2_RBFOX2_expr.txt
test/construct_network/input/Target_Result/HepG2_QKI/: HepG2_QKI_target.txt
test/construct_network/input/Target_Result/HepG2_RBFOX2/: HepG2_RBFOX2_param.txt  HepG2_RBFOX2_target.txt
test/construct_network/output/: test_network.gexf
test/find_target/: run_find_target.sh
test/find_target/output/HepG2_QKI/: HepG2_QKI_param.txt
test/findtarget/input/: QKI_CLIP_sig_peaks.bed
test/findtarget/output/HepG2_QKI/: HepG2_QKI_target.txt
