[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RAISE"
version = "0.1.0"  
authors = [
  { name="liuyilei8969", email="ylliu8969@gmail.com" },
]
description = "RBP Activity Inference from Splicing Events"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://gitee.com/liuyilei8969/RAISE/"
Issues = "https://github.com/liuyilei8969/RAISE/issues"

[tool.hatch.metadata]
include = ["src"]
